--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,22 +1,21 @@
 ---
+root: true
 
 plugins:
   - jest
+  - babel
 
 env:
   node: true
+  jest: true
+  browser: true
+
+parser: "@babel/eslint-parser"
 
 extends:
-  - 'airbnb-base'
-  - 'plugin:jest/recommended'
-
-parserOptions:
-  ecmaVersion: latest
+  - "airbnb-base"
+  - "plugin:jest/recommended"
 
 rules:
   no-console: 0
-  import/extensions:
-    - error
-    - ignorePackages
-    - js: always
-  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  import/extensions: 0
