--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/AndreyCurious/frontend-project-11#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/eslint-parser": "^7.21.3",
     "@webpack-cli/generators": "^3.0.1",
+    "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
