--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@babel/eslint-parser": "^7.21.3",
     "@webpack-cli/generators": "^3.0.1",
     "babel-eslint": "^10.1.0",
-    "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
     "postcss-loader": "^7.1.0",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.0",
@@ -57,6 +59,7 @@
     "array.prototype.flatmap": "^1.3.1",
     "available-typed-arrays": "^1.0.5",
     "balanced-match": "^1.0.2",
+    "bootstrap": "^5.2.3",
     "brace-expansion": "^1.1.11",
     "browserslist": "^4.21.5",
     "buffer-from": "^1.1.2",
