--- a/.github/workflows/Eslint.yml
+++ b/.github/workflows/Eslint.yml
@@ -22,6 +22,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: build
+      run: make install
     - name: run linter
       run: make lint
       
