--- a/.github/workflows/Eslint.yml
+++ b/.github/workflows/Eslint.yml
@@ -23,7 +23,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: build
-      run: make install
+      run: |
+      make install
+      make build
     - name: run linter
       run: make lint
       
