--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
+    "lodash": "^4.17.21",
     "postcss-loader": "^7.1.0",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.0",
@@ -40,6 +41,9 @@
     "workbox-webpack-plugin": "^6.5.3"
   },
   "dependencies": {
+    "on-change": "^4.0.2",
+    "i18next": "^22.4.13",
+    "yup": "^1.0.2",
     "acorn": "^8.8.2",
     "acorn-import-assertions": "^1.8.0",
     "acorn-jsx": "^5.3.2",
