--- a/package.json
+++ b/package.json
@@ -41,9 +41,6 @@
     "workbox-webpack-plugin": "^6.5.3"
   },
   "dependencies": {
-    "on-change": "^4.0.2",
-    "i18next": "^22.4.13",
-    "yup": "^1.0.2",
     "acorn": "^8.8.2",
     "acorn-import-assertions": "^1.8.0",
     "acorn-jsx": "^5.3.2",
@@ -57,6 +54,7 @@
     "array.prototype.flat": "^1.3.1",
     "array.prototype.flatmap": "^1.3.1",
     "available-typed-arrays": "^1.0.5",
+    "axios": "^1.3.4",
     "balanced-match": "^1.0.2",
     "bootstrap": "^5.2.3",
     "brace-expansion": "^1.1.11",
@@ -126,6 +124,7 @@
     "has-proto": "^1.0.1",
     "has-symbols": "^1.0.3",
     "has-tostringtag": "^1.0.0",
+    "i18next": "^22.4.13",
     "ignore": "^5.2.4",
     "import-fresh": "^3.3.0",
     "imurmurhash": "^0.1.4",
@@ -175,6 +174,7 @@
     "object.assign": "^4.1.4",
     "object.entries": "^1.1.6",
     "object.values": "^1.1.6",
+    "on-change": "^4.0.2",
     "once": "^1.4.0",
     "optionator": "^0.9.1",
     "p-limit": "^3.1.0",
@@ -231,6 +231,7 @@
     "which-typed-array": "^1.1.9",
     "word-wrap": "^1.2.3",
     "wrappy": "^1.0.2",
-    "yocto-queue": "^0.1.0"
+    "yocto-queue": "^0.1.0",
+    "yup": "^1.0.2"
   }
 }
