--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
     "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-module-utils": "^2.7.4",
-    "eslint-scope": "^5.1.1",
-    "eslint-visitor-keys": "^3.3.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
     "postcss-loader": "^7.1.0",
@@ -40,15 +38,13 @@
     "style-loader": "^3.3.2",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.9.2",
-    "workbox-webpack-plugin": "^6.5.3"
+    "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
-    "lodash": "^4.17.21",
-    "browserslist": "^4.21.5",
     "i18next": "^22.4.13",
+    "lodash": "^4.17.21",
     "on-change": "^4.0.2",
     "webpack-sources": "^3.2.3",
     "yup": "^1.0.2"
